[package]
name = "starter"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm-core = "0.10"
risc0-zkvm-host = "0.10"
risc0-zkvm-serde = "0.10"
serde = "1.0"
blake2 = "0.10.4"
blake2b-ref = { version = "0.3.0", default-features = false}
sparse-merkle-tree =  { version = "0.5.3", default-features = false}
